fix(textfield): fixes permanently visible block after the field

--- a/packages/ui-core/src/components/TextField/TextField.less
+++ b/packages/ui-core/src/components/TextField/TextField.less
@@ -237,7 +237,7 @@
         color: var(--fury);
     }
 
-    &__wrap {
+    &__field-bottom-wrapper {
         display: flex;
         margin-top: 8px;
         overflow: hidden;
